- Framework Updates ( VN-898 )